# search-engine-workshop

./: README.md  UV_SETUP_TUTORIAL.md  documents.json  main.py  playground.ipynb  playground_bahasa.ipynb  pyproject.toml  start.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  playground-checkpoint.ipynb  playground_bahasa-checkpoint.ipynb
scrapper/: README.md  direct_crawler.py  kompas_spider.py
